--- a/TD-CMA Kit/TD_CMAKit.csproj
+++ b/TD-CMA Kit/TD_CMAKit.csproj
@@ -10,6 +10,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="2.80.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Microcode.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
